tests/valid/VarDecl_Valid_0.whiley
import println from whiley.lang.System

void ::main(System.Console sys):
    x = 1
    sys.out.println(Any.toString(x))
