tests/invalid/Function_Invalid_1.whiley
import * from whiley.lang.*

void f(int x):
    asdkljkljg(x)

void ::main(System.Console sys):
    f(1)
